loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:10: error: not found: value baggelsVus
      bagglesVus = baggelsVus +1
                   ^